<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".subscription.SubscriptionActivity">


    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/walletLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen260"
        android:background="@drawable/bg_settings"
        android:padding="@dimen/dimen15"
        android:layout_marginTop="@dimen/dimen10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/myWalletText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen15"
            android:paddingRight="@dimen/dimen15"
            android:text="@string/watchUnlimited"
            android:textColor="@color/yellow"
            android:textSize="@dimen/textview14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/myWalletText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen15"
            android:paddingRight="@dimen/dimen15"
            android:text="@string/watchUnlimited2"
            android:textColor="@color/yellow"
            android:textSize="@dimen/textview14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myWalletText"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/premiumSubscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen15"
            android:paddingRight="@dimen/dimen15"
            android:text="@string/premiumSubscription"
            android:textColor="@color/yellow"
            android:textSize="@dimen/textview20"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myWalletText2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/subscribeButton"
            android:layout_width="@dimen/dimen180"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen25"
            android:background="@drawable/rounded_corner"
            android:paddingStart="@dimen/dimen20"
            android:paddingTop="@dimen/dimen10"
            android:paddingEnd="@dimen/dimen20"
            android:paddingBottom="@dimen/dimen10"
            android:text="@string/subscribeNow"
            android:textColor="@color/white"
            android:textSize="@dimen/textview14"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/premiumSubscription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/paymentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen15"
        app:cardBackgroundColor="@color/settingCard"
        app:cardCornerRadius="@dimen/dimen10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/walletLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen5"
            android:layout_marginEnd="@dimen/dimen5"
            android:paddingTop="@dimen/dimen25"
            android:paddingBottom="@dimen/dimen25"
            app:layout_constrainedHeight="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/monthSubscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen15"
                android:text="$99/Month"
                android:textStyle="bold"
                android:textColor="@color/orangeColor"
                android:textSize="@dimen/textview18"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/monthSubView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimenHalf"
                android:background="@color/text_primary"
                android:paddingStart="@dimen/dimen10"
                android:paddingRight="@dimen/dimen10"
                android:layout_marginTop="@dimen/dimen20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthSubscribe"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/condition1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen15"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen15"
                android:paddingRight="@dimen/dimen15"
                android:text="@string/condition1"
                android:textColor="@color/yellow"
                android:textSize="@dimen/textview14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/monthSubView" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/condition2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen6"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen15"
                android:paddingRight="@dimen/dimen15"
                android:text="@string/condition2"
                android:textColor="@color/yellow"
                android:textSize="@dimen/textview14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/condition1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/condition3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen6"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen15"
                android:paddingRight="@dimen/dimen15"
                android:text="@string/condition3"
                android:textColor="@color/yellow"
                android:textSize="@dimen/textview14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/condition2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/condition4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen6"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen15"
                android:paddingRight="@dimen/dimen15"
                android:text="@string/condition4"
                android:textColor="@color/yellow"
                android:textSize="@dimen/textview14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/condition3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/condition5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen6"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen15"
                android:paddingRight="@dimen/dimen15"
                android:text="@string/condition5"
                android:textColor="@color/yellow"
                android:textSize="@dimen/textview14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/condition4"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/joinNow"
                android:layout_width="@dimen/dimen180"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:background="@drawable/rounded_corner"
                android:paddingStart="@dimen/dimen20"
                android:paddingTop="@dimen/dimen10"
                android:paddingEnd="@dimen/dimen20"
                android:paddingBottom="@dimen/dimen10"
                android:text="@string/joinNow"
                android:textColor="@color/white"
                android:textSize="@dimen/textview14"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/condition5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>