<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".login.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_slider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:visibility="gone"
            android:id="@+id/logoImg"
            android:layout_width="@dimen/dimen128"
            android:layout_height="@dimen/dimen128"
            android:layout_marginTop="@dimen/dimen80"
            android:padding="@dimen/dimen15"
            android:src="@drawable/logo_white"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium_numbers"
                android:text="@string/getStarted"
                android:textColor="@color/white"
                android:textSize="@dimen/textview18"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/xmarkImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subWelcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen40"
                android:fontFamily="@font/roboto_medium_numbers"
                android:text="@string/subNumberText"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/textview13"
                android:layout_marginLeft="@dimen/dimen45"
                android:layout_marginRight="@dimen/dimen45"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/xmarkImage" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext"
                android:layout_margin="@dimen/dimen30"
                android:hint="@string/mobile"
                android:inputType="number"
                android:maxLength="14"
                android:padding="@dimen/dimen15"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/textview16" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen40"
                android:layout_gravity="center"
                android:background="@drawable/gradient_otp"
                android:fontFamily="@font/roboto_medium_numbers"
                android:layout_marginLeft="@dimen/dimen35"
                android:layout_marginRight="@dimen/dimen35"
                android:paddingTop="@dimen/dimen13"
                android:paddingBottom="@dimen/dimen13"
                android:layout_marginBottom="@dimen/dimen10"
                android:textColor="@color/white"
                android:text="@string/login"
                android:drawableTint="@color/white"
                android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right"
                android:textSize="@dimen/textview16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:text="@string/alreadyAccount"
                android:textColor="@color/grey"
                android:textSize="@dimen/textview16"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAccount" />
        </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>